Fix iframe-custom-class on mobile screens

--- a/frontend/src/messageBody.styl
+++ b/frontend/src/messageBody.styl
@@ -49,8 +49,8 @@
   }
 
   .iframe-custom-class {
-    max-height: 300px !important
-    max-width: 400px !important
+    height: 200px !important
+    width: 280px !important
   }
 }
 
